# python_readiness

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  python_readiness.py  test_python_readiness.py
.github/workflows/: test.yml
scripts/: adoption.ipynb
