[project]
name = "python_readiness"
version = "1.0"
authors = [{name = "Shantanu Jain"}, {email = "hauntsaninja@gmail.com"}]
description = "Are your dependencies ready for new Python?"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.10",
    "packaging>=24",
]

[project.scripts]
python_readiness = "python_readiness:main"

[project.urls]
homepage = "https://github.com/hauntsaninja/python_readiness"
repository = "https://github.com/hauntsaninja/python_readiness"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.mypy]
strict = true
